fixed the background color on the nav bar and the hover color change on the href ul items. still trying to shift the nav to the right, have tried padding and float.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,6 +58,55 @@ body {
 
 }
 
+/* ------------------------------------------------- Nav Bar ----*/
+.navbar {
+    background-color: #401d35;
+}
+
+.navbar nav { 
+    font-family: lato, sans-serif;
+    color: #777777;
+    background-color: #401d35;
+        
+}
+
+
+
+.nav-link {
+    float: inline-end;
+    color:#fff
+}
+.nav-link:hover {
+    color:  #f72585;
+    transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+
+}
+
+.navbar-brand {
+    background-color: #401d35;
+    font-family: lato, sans-serif;
+    font-weight: 900;
+    color: #fff;
+    
+}
+
+.navbar-brand:hover {
+    color:  #f72585;
+    transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+
+}
+
+#navbarNavDropdown {
+    background-color: #401d35;
+    color: #fff;
+    float: inline-end;
+}
 
 
 /* ------------------------------------------------- jumbotron ----*/
@@ -103,34 +152,6 @@ body {
         width: 100%;
         background-color: rgba(0, 0, 0, 0.5);
     }
-/* ------------------------------------------------- Nav Bar ----*/
-
-.navbar nav { 
-    font-family: lato, sans-serif;
-    color: #777777;
-        
-}
-
-.nav-link {
-    float: inline-end;
-    color:#777777
-}
-
-.navbar-brand {
-    font-family: lato, sans-serif;
-    font-weight: 900;
-    color: #401d35;
-    
-}
-
-.navbar-brand:hover {
-    color:  #f72585;
-    transition: all 0.35s ease-in-out;
-    -moz-transition: all 0.35s ease-in-out;
-    -webkit-transition: all 0.35s ease-in-out;
-    -o-transition: all 0.35s ease-in-out;
-
-}
 
 
 /* ------------------------------------------------- buttons ----*/
@@ -192,10 +213,7 @@ footer {
     background: #f72585;
 }
 
-#footer-details {
-    margin-top: 20px;
 
-}
 
 
 /* ------------------------------------------------- modal ----*/
